compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/FunctionWithoutName.fir.java
public abstract interface Foo /* test.Foo*/ {
  @org.jetbrains.annotations.NotNull()
  public abstract java.lang.String foo();//  foo()
}
